GH-157: Fix Article Preview spacing

--- a/taccsite_cms/static/site_cms/css/src/_imports/trumps/s-article-list.css
+++ b/taccsite_cms/static/site_cms/css/src/_imports/trumps/s-article-list.css
@@ -66,8 +66,8 @@ Styleguide Trumps.Scopes.ArticleList
 
 /* Children: Article */
 
-[class*="s-article-list--"] article {
-  /* … */
+.s-article-list--news article {
+  height: 320px;
 }
 
 /* Children: "See More" */
@@ -80,6 +80,7 @@ Styleguide Trumps.Scopes.ArticleList
 
   /* To add border and spacing */
   border-top: var(--global-border-width--thick) solid var(--global-color-primary--xx-light);
+  margin-top: 30px;
   padding-top: 10px;
   padding-bottom: 10px;
   margin-bottom: -10px; /* to "undo" space added from `padding-bottom` */
